# OS

./: CMakeLists.txt  build.cmd  db_manager.cpp  db_manager.h  server.cpp  server.h  temperatureStorage.hpp  timeLogging.cpp  usbTemperature.cpp  usbTemperatureReader.cpp  usbTemperatureWriter.cpp
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
source/: myprog.cpp  timeLogging.cpp
sqlite/: CMakeLists.txt
